--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     align-content: flex-end;
 }
 
-.btn {
+.btn, .delete, .clear {
     width: 60px;
     height: 60px;
     border-radius: 50%;
